<resources>
    <string name="app_name">हिंदी से English में Translate करना सीखें</string>
    <string name="notification">Notification</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="devby">Developed &amp; Designed By:- Vimal K.</string>

    <!-- ' and ending ' -->
    <string name="action_home">Home</string>
    <string name="action_exit">Exit</string>
    <string name="action_back">Back</string>
    <string name="setting">Settings</string>
    <string name="activity_newupdate">New Update</string>
    <string name="action_about">About Us</string>
    <string name="action_share">Share App</string>
    <string name="version_id">Version 1.0</string>
    <string name="the_perfect_place">The perfect place for easy learning</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="communicate">Communicate</string>
    <string name="star_5">5+ Star</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="feedback">Feedback</string>
    <string name="publisher_name">© Vimal Inc.™</string>
    <string name="website_name">+91 9971770331</string>
    <string name="contact_us">Contact Us</string>
    <string name="github">Github</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="social_links">Social Links</string>
    <string name="facebook">Facebook</string>
    <string name="dev">Android developer, Engineering student,\nFreelancer and an open source enthusiast.</string>
    <string name="dis">I tried my best to create this app user friendly. I hope you enjoy it. If you have any problem then you can contact.</string>
    <string name="dbms_fullname">Learn Computer</string>
    <string name="the_perect">The Perfect Place for easy learning…</string>
    <string name="win_short">Windows 10 ShortKey</string>
    <string name="home">Home</string>
    <string name="version">Version 1.0</string>
    <string name="pick_file">Pick file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>

    <!-- ' Ads unit ' -->
    <string name="ad_unit_banner">ca-app-pub-2650198364422513/9386711990</string>
    <string name="interstitial_full_screen">ca-app-pub-2650198364422513/9722410459</string>
    <string name="google_admob_app_id">ca-app-pub-2650198364422513~7287818809</string>

    <string name="learn_translation_1">Learn Translation</string>
    <string name="grammer_rules_2">Grammar Rules</string>
    <string name="indefinite_tenses_rules_3">Indefinite Tenses Rules</string>
    <string name="Continuous_Tenses_Rules_4">Continuous Tenses Rules</string>
    <string name="PerfectTensesRules_5">Perfect Tenses Rules</string>
    <string name="Perfect_Continuous_Tenses_Rules_6">Perfect Continuous Tenses Rules</string>
    <string name="Verb_Helping_verb_7">Verb/Helping verb का प्रयोग....Translation</string>
    <string name="tense_Simple_Translation_8">Tenses…Simple Translation</string>
    <string name="Modals_Simple_Translation_9">Modals (मॉडल)....Simple Translation</string>
    <string name="Questions_Making_10">Questions Making…Simple Translation</string>
    <string name="Dialogues_Conversations_11"><![CDATA[Dialogues & Conversations…Simple Translation]]></string>
    <string name="Exercises_for_Practice_12">Exercises for Practice Test</string>
    <string name="contact_us_address">First Floor, Laxmi Tower, Chirag Delhi Village - New Delhi - India (110017)</string>
    <string name="about_company">Apps from Vinc to help you get the most out of your day, across all your devices.</string>
    <string name="no_notification">No Notification</string>
    <string name="description">Description</string>
    <string name="new_icon">NEW</string>



</resources>
