<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

<item
    android:id="@+id/notification"
    android:orderInCategory="000"
    app:showAsAction="ifRoom"
    android:icon="@drawable/ic_menu_notification"
    android:title="@string/notification" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="103"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
